<resources>
    <string name="app_name">Example</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="common_confirm">확인</string>
    <string name="common_agree">동의</string>
    <string name="common_cancel">취소</string>
    <string name="common_notice">알림</string>
    <string name="common_no_msg">내용없음</string>
    <string name="common_guide">안내</string>
    <string name="common_logout">로그아웃</string>
    <string name="common_yes">예</string>
    <string name="common_no">아니요</string>

    <string name="permission_info">앱 접근 권한</string>
    <string name="camera">카메라</string>
    <string name="file">저장공간</string>
    <string name="phone">전화</string>
    <string name="contact">주소록</string>
    <string name="permission_camera_desc">신분증 촬영에 사용됩니다.</string>
    <string name="permission_file_desc">원할한 서비스 제공을 위해 필요한 컨텐츠를\n저장/읽을 수 있습니다.</string>
    <string name="permission_phone_desc">고객센터 연결을 위해 사용됩니다.</string>
    <string name="permission_contact_desc">가입된 통신사를 파악하고 전화번호 확인을 위해 사용됩니다.</string>

    <string name="permission_deny_title">앱 접근 권한 미동의</string>
    <string name="permission_deny_desc">앱 접근 권한에 동의하지 않으시면\n앱을 이용하실 수 없습니다.\n앱을 종료하시겠습니까?</string>
</resources>

